--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -39,9 +39,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.httpget.MainActivity" />
         </activity>
-        
+       
         <activity 
-            android:name="com.example.httpget.HttpPostExample"
+            android:name="com.example.httpget.HttpPostCheckIn"
             android:label="@string/unknown_string"
             android:parentActivityName="com.example.httpget.MainActivity">
             <meta-data
@@ -49,8 +49,17 @@
                 android:value="com.example.httpget.MainActivity" />
         </activity>
         
+        <activity
+            android:name="com.example.httpget.HttpPostRegister"
+            android:label="@string/unknown_string"
+            android:parentActivityName="com.example.httpget.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.httpget.MainActivity" />
+            
+        </activity>
         
-        
+       
         
               
     </application>
