--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,28 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.httpget"
+    package="com.example.datacollector"
     android:versionCode="1"
     android:versionName="1.0" >
-	<uses-permission 
-	    android:name="android.permission.INTERNET"/>
-	<uses-permission
-	    android:name="ACCESS_COARSE_LOCATION" />
-	<uses-permission
-	    android:name="ACCESS_FINE_LOCATION" />
-	    
-	
+
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="17" />
- 	
+        android:targetSdkVersion="10" />
+
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />
+
     <application
-        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-       
+        android:label="@string/app_name" >
         <activity
-            android:name="com.example.httpget.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,43 +33,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity 
-            android:name="com.example.httpget.HttpGetExample"
-            android:label="@string/unknown_string"
-            android:parentActivityName="com.example.httpget.MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.httpget.MainActivity" />
-        </activity>
-       
-        <activity 
-            android:name="com.example.httpget.HttpPostCheckIn"
-            android:label="@string/unknown_string"
-            android:parentActivityName="com.example.httpget.MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.httpget.MainActivity" />
-        </activity>
-        
-        <activity
-            android:name="com.example.httpget.HttpPostRegister"
-            android:label="@string/unknown_string"
-            android:parentActivityName="com.example.httpget.MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.httpget.MainActivity" />
-            
-        </activity>
-        
-        <activity
-            android:name="com.example.httpget.HttpPostRegion"
-            android:label="@string/unknown_string"
-            android:parentActivityName="com.example.httpget.MainActivity">
-            <meta-data 
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.httpget.MainActivity" />
-        </activity>
-                     
+
+        <service android:name=".Upload_info" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </service>
     </application>
-  </manifest>
+
+</manifest>
