--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,11 +27,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            
         </activity>
 
         <service android:name=".Upload_info" >
@@ -41,6 +37,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </service>
+        
+        <activity
+            android:name=".OtherActivity"
+            android:label="@string/app_name" android:theme="@style/Theme.FloatActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
     </application>
 
 </manifest>
